--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,38 +1,47 @@
 {
   "env": {
     "browser": true,
-    "commonjs": true,
     "es2021": true
   },
-  "ignorePatterns": "dist",
-  "extends": [
-    "airbnb-base",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/typescript"
-  ],
+  "extends": ["standard", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
-    "project": "tsconfig.json"
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "import/prefer-default-export": "off",
-    "@typescript-eslint/no-misused-promises": "off",
-    "@typescript-eslint/no-floating-promises": "off",
+    "semi": ["warn", "always"],
+    "comma-dangle": ["warn", "always-multiline"],
     "no-void": "off",
-    "import/extensions": [
+    "no-console": "warn",
+    "prefer-destructuring": [
       "error",
-      "ignorePackages",
       {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
+        "array": true,
+        "object": true
+      },
+      {
+        "enforceForRenamedProperties": true
       }
-   ]
+    ],
+    "object-curly-spacing": [
+      "warn",
+      "always",
+      { "arraysInObjects": false, "objectsInObjects": true }
+    ],
+    "object-property-newline": [
+      "error",
+      { "allowAllPropertiesOnSameLine": true }
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 100,
+        "ignoreRegExpLiterals": true,
+        "ignoreComments": true,
+        "ignoreStrings": true
+      }
+    ]
   }
 }
