--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon",
     "build": "tsc",
+    "start:prod": "node dist/index.js",
     "lint": "eslint --fix"
   },
   "keywords": [],
@@ -19,7 +20,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.3",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "swagger-jsdoc": "5.0.1",
@@ -48,5 +50,7 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
-  }
+  },
+  "engines": { "node": "16.7.0" }
+
 }
