--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,8 +61,10 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
     /* Advanced Options */
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true,
+     /* Disallow inconsistently-cased references to the same file. */
+    "declaration": false,
   },
-  "exclude": ["node_modules"],
+  "exclude": ["./node_modules"],
   "include": ["src"]
 }
