--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
-    "@types/mongoose": "^5.10.5",
+    "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/swagger-jsdoc": "^6.0.0",
@@ -51,6 +51,7 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
-  "engines": { "node": "16.7.0" }
-
+  "engines": {
+    "node": "16.7.0"
+  }
 }
