--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "nodemon",
+    "dev": "nodemon",
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
     "build": "tsc",
     "start:prod": "node dist/index.js",
     "lint": "eslint --fix"
